# rustybot

./: .gitignore  Cargo.toml  README.md  fetch_slash_commands.py  openwsl.bat  remove_slash_commands.py  start_from_windows_music_bot.bat  start_linux_module_transcribe_from_windows.bat  start_linux_modules_only.sh  start_linux_modules_only_from_windows.bat  start_rustybot.bat  start_windows_modules_only.bat  start_windows_text2img.bat
artificialintelligence/: checkforcuda.py  package.json  stable.py  stable_diffusion_server.py
artificialintelligence/audiototext/: README.md  audio_2_text_ai.py  mic2stream_server.py  mic_capture_server.py  stream2audio_command_client.py  transcribe_ai_server.py
artificialintelligence/imgai/: depthai.py  imgclassify.py  imgclassifyother.py  questionai.py
artificialintelligence/imgai_testing_models/: depthai.py  imgclassify.py  questionai.py
artificialintelligence/text2vid/: text2vid.py
artificialintelligence/textai/: bertamasker.py  dialoggpt.py  palovion.py
artificialintelligence/textai_testing_models/: bertamasker.py  palovion.py
artificialintelligence/texttotext/: README.md  ner_ai.py  parrot_parser_ai.py
authserver/: authserver.js  package-lock.json  package.json
imggenerator/: aiserver.js  checkforcuda.py  image_generator_ai.py  package-lock.json
src/: audiomanager.rs  audioripper.rs  commands.rs  ffmpeg_utils.rs  handler.rs  main.rs  messages.rs  userstats.rs  youtubestats.rs
src/ai/: diffuserai.rs  googvoice.rs  openai.rs  voicesynth.rs  (+2 more)
voicesynthesizeauthserver/: authserver.js  package-lock.json  package.json
(+27 files in other folders)
